--- a/indexx.html
+++ b/indexx.html
@@ -101,7 +101,7 @@
                 <div class="row">
                       <div class="p-50"></div>
                       <div class="block-title">
-                        <h2>What I Do</h2>
+                        <h2 style="display: flex;">What I Do</h2>
                       </div>
                   </div><!--row closed-->
 
